<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="0.5"
    android:background="@drawable/pizzaimage"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainTitleTextView"
        android:text="@string/mainTitleTextView"
        style="@style/TitleStyle" />

    <Button
        android:id="@+id/btnDelivery"
        style="@style/deliveryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/homeDeliverySubTitle" />

    <Button
        android:id="@+id/btnPickup"
        style="@style/pickupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/storePickupSubTitle"
        android:textAllCaps="false" />

</LinearLayout>