<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CheckoutActivity">

    <TextView
        android:id="@+id/checkoutTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padding10dp"
        android:text="@string/CheckoutActivity"
        android:textAppearance="@style/TitleStyle" />

    <TextView
        android:id="@+id/AmountTxtView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/amountTxt"
        android:textColor="@android:color/background_dark"
        android:textSize="@dimen/subTitleTextSize" />

    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin20dp"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/taxTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/taxTxt"
        android:textColor="@android:color/background_dark"
        android:textSize="@dimen/subTitleTextSize" />

    <EditText
        android:id="@+id/editTextTax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin20dp"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/totalAmountTxtView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/totalAmountTxt"
        android:textColor="@android:color/background_dark"
        android:textSize="@dimen/subTitleTextSize" />

    <EditText
        android:id="@+id/editTextTotalAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin20dp"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/btnPlaceOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/placeOrderTxt" />
</LinearLayout>