<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DeliveryActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padding10dp"
        android:text="@string/deliveryActivityTitle"
        android:textAppearance="@style/TitleStyle" />

    <EditText
        android:id="@+id/editTextTextPostalAddress"
        android:layout_width="match_parent"
        android:layout_height="252dp"
        android:layout_marginTop="@dimen/margin20dp"
        android:ems="10"
        android:hint="@string/deliveryAddressPrompt"
        android:inputType="textPostalAddress" />

    <Button
        android:id="@+id/btnDeliveryAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin20dp"
        android:text="@string/ContinueToCrust" />

</LinearLayout>